--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-scikit-learn
-xgboost
-biopython
-pandas
-numpy
-tpot
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+scikit-learn>=1.1.0
+xgboost>=1.7.0
+tpot>=0.12.0
+biopython>=1.81
+plotly>=5.0.0
